--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -11,7 +11,7 @@
         
         <div class="navbar">
                 <a href="/index.html"> <button id="home-btn">Home</button></a>
-                <a href="/index.html"> <button>Github</button></a>
+                <a href="https://github.com/ChoudharySuresh/Javascript/tree/main/07_projects" target="_blank"> <button>Github</button></a>
         </div>
         
         <section class="project-section">
@@ -27,6 +27,14 @@
             </div>
             <div class="project-link">
                 <a href="/4-guessTheNumber/guessNumber.html">Project Four - Guess the Number </a>
+            </div>
+
+            <h2 class="async-heading">Async Projects</h2>
+            <div class="project-link">
+                <a href="/5-keyboard/keyboard.html">Project Five - Keyboard </a>
+            </div>
+            <div class="project-link">
+                <a href="/6-unlimitedColors/unlimitedcolors.html">Project Six - Unlimited Colors </a>
             </div>
         </section>
     </div>
